# socks5-proxy-rs

./: Cargo.toml  README.md  deploy.sh
.github/workflows/: release.yml
benches/: proxy_bench.rs
src/: lib.rs  main.rs  proxy.rs
src/vmess/: chunk.rs  crypto.rs  mod.rs  vmess.rs
tests/: proxy_test.rs  vmess_e2e_test.rs
